# BestThrusterWeb

./: .gitattributes  .gitignore  .pylintrc  README.md  setup.cfg
.github/workflows/: base-workflows-prs.yml  base-workflows.yml
BestThruster/: db.sqlite3  manage.py
BestThruster/BestThruster/: asgi.py  settings.py  urls.py  wsgi.py
BestThruster/opex/: admin.py  apps.py  calculation_logic.py  forms.py  models.py  urls.py  views.py
BestThruster/opex/logic_codes/: form_data_processor.py  minimum_power_calc.py  thruster_data_modified.py  total_energies.py  utility_functions.py  vessel_data_modified.py  vessel_thrust_deduction.py  vessel_time_spent.py
BestThruster/opex/migrations/: 0001_initial.py  0002_alter_thruster_auxiliary_consumption_kw_and_more.py  0003_alter_thruster_p_d_and_more.py  0004_vessel.py  0005_alter_thruster_p_d_alter_thruster_motor_efficiency_and_more.py  0006_rename_thrust_kn_vessel_thrust_kn.py  0007_rename_propeller_power_kw_thruster_propeller_power_kw_and_more.py  0008_alter_thruster_auxiliary_consumption_kw_and_more.py
BestThruster/opex/static/admin/: custom_admin.css
BestThruster/opex/static/index/: styles.css
BestThruster/opex/templates/admin/: change_list.html  csv_form.html
BestThruster/opex/templates/opex/: index.html  results.html  results_partial.html
doc/: README.md
doc/architecture/: README.md
resources/: README.md
template/: README.md
tests/: README.md  test_something.py
