[metadata]
name = template
version = 0.0.1
author = "Name Surname, Name Surname,..."
author_email = "name.surname@km.kongsberg.com, name.surname@km.kongsberg.com,..."
description = "Short description of the repository."
long_description = file: README.md
url = "https://github.com/Kongsberg-Predictive-Maintenance/template"
keywords = template_keyword1, template_keyword2
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = False
package_dir = 
packages = find:
install_requires =
    numpy
    scipy
    pyyaml; python_version == "3.7"

[options.entry_points]
console_scripts =
    template = template.main:main

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest